--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 </head>
 <body>
     <div id="container">
-        <h1>Crystal Clicker</h1>
+        <header>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h1>Crystal Clicker</h1>
+                </div>
+            </div>
+        </header>
     </div>
 
 
