basic HTML complete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,40 @@
                 </div>
             </div>
         </header>
+
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <h1>Goal: </h1>
+            </div>
+            <div class="col-md-6 text-center">
+                <h1>Wins: </h1>
+                <h1>Losses: </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div id = "crystal-1" class="col-md-3 text-center">
+                <img src="assets/images/Gems_01_128x128_022.png">
+            </div>
+            <div id = "crystal-2" class="col-md-3 text-center">
+                <img src="assets/images/Gems_01_128x128_025.png">
+            </div>
+            <div id = "crystal-3" class="col-md-3 text-center">
+                <img src="assets/images/Gems_01_128x128_026.png">
+            </div>
+            <div id = "crystal-4" class="col-md-3 text-center">
+                <img src="assets/images/Gems_01_128x128_028.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1>Your total: </h1>
+            </div>
+        </div>
+
+
+
     </div>
+
 
 
 
