added Bootstrap card

--- a/index.html
+++ b/index.html
@@ -31,25 +31,28 @@
                 <h1>Losses: </h1>
             </div>
         </div>
-        <div class="row">
-            <div id = "crystal-1" class="col-md-3 text-center">
-                <img src="assets/images/Gems_01_128x128_022.png">
-            </div>
-            <div id = "crystal-2" class="col-md-3 text-center">
-                <img src="assets/images/Gems_01_128x128_025.png">
-            </div>
-            <div id = "crystal-3" class="col-md-3 text-center">
-                <img src="assets/images/Gems_01_128x128_026.png">
-            </div>
-            <div id = "crystal-4" class="col-md-3 text-center">
-                <img src="assets/images/Gems_01_128x128_028.png">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h1>Your total: </h1>
-            </div>
-        </div>
+            <div class="card w-75 mx-auto">  
+                <div class="row">
+                    <div id = "crystal-1" class="col-md-3 text-center">
+                        <img src="assets/images/Gems_01_128x128_022.png">
+                    </div>
+                    <div id = "crystal-2" class="col-md-3 text-center">
+                        <img src="assets/images/Gems_01_128x128_025.png">
+                    </div>
+                    <div id = "crystal-3" class="col-md-3 text-center">
+                        <img src="assets/images/Gems_01_128x128_026.png">
+                    </div>
+                    <div id = "crystal-4" class="col-md-3 text-center">
+                        <img src="assets/images/Gems_01_128x128_028.png">
+                    </div>
+                </div>
+            </div>    
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>Your total: </h1>
+                    </div>
+                </div>
+            
 
 
 
