added ids to crystals

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         </div>
             <div class="card w-75 mx-auto">  
                 <div class="row">
-                    <div id = "crystal-1" class="col-md-3 text-center">
-                        <img src="assets/images/Gems_01_128x128_022.png">
+                    <div id="0" class="col-md-3 text-center crystal">
+                            <img src="assets/images/Gems_01_128x128_022.png">
                     </div>
-                    <div id = "crystal-2" class="col-md-3 text-center">
-                        <img src="assets/images/Gems_01_128x128_025.png">
+                    <div id="1" class="col-md-3 text-center crystal">
+                            <img src="assets/images/Gems_01_128x128_025.png">
                     </div>
-                    <div id = "crystal-3" class="col-md-3 text-center">
-                        <img src="assets/images/Gems_01_128x128_026.png">
+                    <div id="2" class="col-md-3 text-center crystal">
+                            <img src="assets/images/Gems_01_128x128_026.png">
                     </div>
-                    <div id = "crystal-4" class="col-md-3 text-center">
-                        <img src="assets/images/Gems_01_128x128_028.png">
+                    <div id="3" class="col-md-3 text-center crystal">
+                            <img src="assets/images/Gems_01_128x128_028.png">
                     </div>
                 </div>
             </div>    
