--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </header>
 
         <div class="row">
-            <div class="col-md-6 text-center">
-                <h1>Goal: </h1>
+            <div id = "goal" class="col-md-6 text-center">
+                <h1>Goal:   </h1>
             </div>
             <div class="col-md-6 text-center">
                 <h1>Wins: </h1>
