adding losing logic

--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
                     </div>
                 </div>
             </div>    
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h1>Your total: </h1>
-                    </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h1 id="total">Your total: 0 </h1>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h1 id="message"></h1>
+                </div>
+            </div>
             
 
 
