--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <h1>Goal:   </h1>
             </div>
             <div class="col-md-6 text-center">
-                <h1>Wins: </h1>
-                <h1>Losses: </h1>
+                <h1 id="wins">Wins: </h1>
+                <h1 id="losses">Losses: </h1>
             </div>
         </div>
             <div class="card w-75 mx-auto">  
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div id="play-again" class="col-md-12 text-center">
                     <h1 id="message"></h1>
                 </div>
             </div>
